build/parser.output
Terminals unused in grammar

    END
    FLOAT
    ATTRIBUT
    STOP


State 11 conflicts: 5 shift/reduce
State 112 conflicts: 1 reduce/reduce
State 201 conflicts: 7 reduce/reduce


Grammar

    0 $accept: programme $end

    1 programme: subProgramme

    2 subProgramme: instruction NL subProgramme
    3             | NL

    4 instructions: instruction NL instructions
    5             | %empty

    6 instruction: expression

    7 attributsInline: attributAffectation
    8                | attributsInline '&' attributAffectation

    9 attributsCSS: attributAffectation ';'
   10             | attributsCSS NL attributAffectation ';'

   11 attributs: ';'
   12          | '{' NL attributsCSS NL '}'
   13          | INLINE_AFFECTATION attributsInline ';'

   14 attributAffectation: COULEUR ':' couleurValue
   15                    | REMPLISSAGE ':' couleurValue
   16                    | ROTATION ':' operation DEGRE
   17                    | OPACITE ':' operation '%'
   18                    | EPAISSEUR ':' operation
   19                    | POSITIONX ':' operation
   20                    | POSITIONY ':' operation

   21 couleurValue: HEXA_VALUE
   22             | variable

   23 expression: declarationCanva ';'
   24           | declarationFigure
   25           | modificationFigure ';'
   26           | declarationVariableSimple ';'
   27           | declarationVariable
   28           | if
   29           | accesFigure
   30           | boucleFor
   31           | boucleWhile
   32           | affectation ';'
   33           | fonction
   34           | appelFonction ';'

   35 variable: VARIABLE
   36         | TAILLE

   37 boolValue: TRUE
   38          | FALSE

   39 declarationVariableSimple: INT_TYPE variable '=' operation
   40                          | FLOAT_TYPE variable '=' operation
   41                          | BOOL_TYPE variable '=' boolValue
   42                          | COULEUR variable '=' HEXA_VALUE

   43 declarationCanva: TAILLE operation operation

   44 declarationFigure: carre
   45                  | rectangle
   46                  | triangle
   47                  | cercle
   48                  | ellipse
   49                  | chemin
   50                  | ligne
   51                  | texte

   52 carre: CARRE operation operation operation attributs

   53 rectangle: RECTANGLE operation operation operation operation operation operation operation operation attributs

   54 triangle: TRIANGLE operation operation operation operation attributs

   55 cercle: CERCLE operation operation operation attributs

   56 ellipse: ELLIPSE operation operation operation operation attributs

   57 ligne: LIGNE operation operation operation operation attributs

   58 chemin: CHEMIN vectPos attributs

   59 texte: TEXTE operation operation STRING STRING attributs

   60 accesFigure: CARRE '[' NUMBER ']' '.'
   61            | RECTANGLE '[' NUMBER ']' '.'
   62            | TRIANGLE '[' NUMBER ']' '.'
   63            | CERCLE '[' NUMBER ']' '.'
   64            | ELLIPSE '[' NUMBER ']' '.'
   65            | LIGNE '[' NUMBER ']' '.'
   66            | CHEMIN '[' NUMBER ']' '.'
   67            | TEXTE '[' NUMBER ']' '.'
   68            | variable '.'

   69 setAttribut: COULEUR '=' couleurValue
   70            | REMPLISSAGE '=' couleurValue
   71            | ROTATION '=' operation DEGRE
   72            | OPACITE '=' operation '%'
   73            | EPAISSEUR '=' operation
   74            | POSITIONX '=' operation
   75            | POSITIONY '=' operation

   76 setTaille: TAILLE
   77          | HAUTEUR
   78          | LARGEUR

   79 modificationFigure: accesFigure setAttribut
   80                   | accesFigure setTaille '=' operation

   81 declarationVariable: variable '=' declarationFigure

   82 numberComparator: EQUAL
   83                 | NOTEQUAL
   84                 | LESSEQUAL
   85                 | GREATEREQUAL
   86                 | LESS
   87                 | GREATER

   88 stringComparator: STRINGEQUAL
   89                 | STRINGNOTEQUAL

   90 positionValue: POSITIONX
   91              | POSITIONY

   92 condition: accesFigure setTaille numberComparator operation
   93          | accesFigure positionValue numberComparator operation
   94          | operation numberComparator operation
   95          | variable
   96          | accesFigure COULEUR stringComparator couleurValue

   97 conditions: condition
   98           | '(' conditions ')' AND '(' condition ')'

   99 if: SI '(' conditions ')' ALORS '{' NL instructions '}' NL else

  100 else: %empty
  101     | SINON '{' NL instructions '}'

  102 boucleFor: REPETE operation FOIS '{' NL instructions '}'

  103 boucleWhile: WHILE '(' conditions ')' '{' NL instructions '}'

  104 affectation: variable '=' operation
  105            | variable '=' boolValue
  106            | variable '=' HEXA_VALUE

  107 arguments: %empty
  108          | variable arguments

  109 argumentsValues: %empty
  110                | operation argumentsValues

  111 fonction: FUNCTION variable '(' arguments ')' '{' NL instructions '}'

  112 appelFonction: variable argumentsValues

  113 operation: NUMBER
  114          | variable
  115          | '(' operation ')'
  116          | operation '+' operation
  117          | operation '-' operation
  118          | operation '*' operation
  119          | operation '/' operation
  120          | '-' operation

  121 vectPos: operation operation
  122        | vectPos ',' operation operation


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 17 72
    '&' (38) 8
    '(' (40) 98 99 103 111 115
    ')' (41) 98 99 103 111 115
    '*' (42) 118
    '+' (43) 116
    ',' (44) 122
    '-' (45) 117 120
    '.' (46) 60 61 62 63 64 65 66 67 68
    '/' (47) 119
    ':' (58) 14 15 16 17 18 19 20
    ';' (59) 9 10 11 13 23 25 26 32 34
    '=' (61) 39 40 41 42 69 70 71 72 73 74 75 80 81 104 105 106
    '[' (91) 60 61 62 63 64 65 66 67
    ']' (93) 60 61 62 63 64 65 66 67
    '{' (123) 12 99 101 102 103 111
    '}' (125) 12 99 101 102 103 111
    error (256)
    NL (258) 2 3 4 10 12 99 101 102 103 111
    END (259)
    NUMBER <int> (260) 60 61 62 63 64 65 66 67 113
    FLOAT <float> (261)
    TRUE (262) 37
    FALSE (263) 38
    INT_TYPE <std::string> (264) 39
    BOOL_TYPE <std::string> (265) 41
    FLOAT_TYPE <std::string> (266) 40
    VARIABLE <std::string> (267) 35
    STRING <std::string> (268) 59
    POSITIONX <std::string> (269) 19 74 90
    POSITIONY <std::string> (270) 20 75 91
    ATTRIBUT (271)
    INLINE_AFFECTATION (272) 13
    HEXA_VALUE <std::string> (273) 21 42 106
    COULEUR <std::string> (274) 14 42 69 96
    ROTATION <std::string> (275) 16 71
    REMPLISSAGE <std::string> (276) 15 70
    OPACITE <std::string> (277) 17 72
    EPAISSEUR <std::string> (278) 18 73
    SI (279) 99
    ALORS (280) 99
    SINON (281) 101
    FUNCTION (282) 111
    REPETE (283) 102
    FOIS (284) 102
    WHILE (285) 103
    EQUAL (286) 82
    NOTEQUAL (287) 83
    LESS (288) 86
    LESSEQUAL (289) 84
    GREATER (290) 87
    GREATEREQUAL (291) 85
    STRINGEQUAL (292) 88
    STRINGNOTEQUAL (293) 89
    TAILLE <std::string> (294) 36 43 76
    HAUTEUR (295) 77
    LARGEUR (296) 78
    RECTANGLE (297) 53 61
    CARRE (298) 52 60
    TRIANGLE (299) 54 62
    CERCLE (300) 55 63
    ELLIPSE (301) 56 64
    LIGNE (302) 57 65
    CHEMIN (303) 58 66
    TEXTE (304) 59 67
    STOP (305)
    DEGRE (306) 16 71
    AND (307) 98
    NEG (308)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    programme <ArbreSyntaxique> (72)
        on left: 1
        on right: 0
    subProgramme <ArbreSyntaxique> (73)
        on left: 2 3
        on right: 1 2
    instructions <std::vector<std::shared_ptr<Noeud>>> (74)
        on left: 4 5
        on right: 4 99 101 102 103 111
    instruction <std::shared_ptr<Noeud>> (75)
        on left: 6
        on right: 2 4
    attributsInline <std::vector<std::shared_ptr<AttributNode>>> (76)
        on left: 7 8
        on right: 8 13
    attributsCSS <std::vector<std::shared_ptr<AttributNode>>> (77)
        on left: 9 10
        on right: 10 12
    attributs <std::vector<std::shared_ptr<AttributNode>>> (78)
        on left: 11 12 13
        on right: 52 53 54 55 56 57 58 59
    attributAffectation <std::shared_ptr<AttributNode>> (79)
        on left: 14 15 16 17 18 19 20
        on right: 7 8 9 10
    couleurValue <CouleurPtr> (80)
        on left: 21 22
        on right: 14 15 69 70 96
    expression <std::shared_ptr<Noeud>> (81)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 6
    variable <std::string> (82)
        on left: 35 36
        on right: 22 39 40 41 42 68 81 95 104 105 106 108 111 112 114
    boolValue <bool> (83)
        on left: 37 38
        on right: 41 105
    declarationVariableSimple <std::shared_ptr<DeclarationVariableSimple>> (84)
        on left: 39 40 41 42
        on right: 26
    declarationCanva <std::shared_ptr<CanevaNode>> (85)
        on left: 43
        on right: 23
    declarationFigure <std::shared_ptr<FigureNode>> (86)
        on left: 44 45 46 47 48 49 50 51
        on right: 24 81
    carre <std::shared_ptr<CarreNode>> (87)
        on left: 52
        on right: 44
    rectangle <std::shared_ptr<RectangleNode>> (88)
        on left: 53
        on right: 45
    triangle <std::shared_ptr<TriangleNode>> (89)
        on left: 54
        on right: 46
    cercle <std::shared_ptr<CercleNode>> (90)
        on left: 55
        on right: 47
    ellipse <std::shared_ptr<EllipseNode>> (91)
        on left: 56
        on right: 48
    ligne <std::shared_ptr<LigneNode>> (92)
        on left: 57
        on right: 50
    chemin <std::shared_ptr<CheminNode>> (93)
        on left: 58
        on right: 49
    texte <std::shared_ptr<TexteNode>> (94)
        on left: 59
        on right: 51
    accesFigure <std::shared_ptr<AccesFigureNode>> (95)
        on left: 60 61 62 63 64 65 66 67 68
        on right: 29 79 80 92 93 96
    setAttribut <std::shared_ptr<AttributNode>> (96)
        on left: 69 70 71 72 73 74 75
        on right: 79
    setTaille <TailleType> (97)
        on left: 76 77 78
        on right: 80 92
    modificationFigure <std::shared_ptr<ModificationFigureNode>> (98)
        on left: 79 80
        on right: 25
    declarationVariable <std::shared_ptr<DeclarationVariable>> (99)
        on left: 81
        on right: 27
    numberComparator <operators> (100)
        on left: 82 83 84 85 86 87
        on right: 92 93 94
    stringComparator <string_operators> (101)
        on left: 88 89
        on right: 96
    positionValue <std::string> (102)
        on left: 90 91
        on right: 93
    condition <std::shared_ptr<ConditionNode>> (103)
        on left: 92 93 94 95 96
        on right: 97 98
    conditions <std::vector<std::shared_ptr<ConditionNode>>> (104)
        on left: 97 98
        on right: 98 99 103
    if <std::shared_ptr<IfNode>> (105)
        on left: 99
        on right: 28
    else <std::vector<std::shared_ptr<Noeud>>> (106)
        on left: 100 101
        on right: 99
    boucleFor <std::shared_ptr<ForLoopNode>> (107)
        on left: 102
        on right: 30
    boucleWhile <std::shared_ptr<WhileNode>> (108)
        on left: 103
        on right: 31
    affectation <std::shared_ptr<AffectationSimpleVariableNode>> (109)
        on left: 104 105 106
        on right: 32
    arguments <std::vector<std::string>> (110)
        on left: 107 108
        on right: 108 111
    argumentsValues <std::vector<ExpressionPtr>> (111)
        on left: 109 110
        on right: 110 112
    fonction <std::shared_ptr<FonctionNode>> (112)
        on left: 111
        on right: 33
    appelFonction <std::shared_ptr<AppelFonctionNode>> (113)
        on left: 112
        on right: 34
    operation <ExpressionPtr> (114)
        on left: 113 114 115 116 117 118 119 120
        on right: 16 17 18 19 20 39 40 43 52 53 54 55 56 57 59 71 72 73 74 75 80 92 93 94 102 104 110 115 116 117 118 119 120 121 122
    vectPos <std::vector<std::shared_ptr<PositionNode>>> (115)
        on left: 121 122
        on right: 58 122


State 0

    0 $accept: . programme $end

    NL          shift, and go to state 1
    INT_TYPE    shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    FLOAT_TYPE  shift, and go to state 4
    VARIABLE    shift, and go to state 5
    COULEUR     shift, and go to state 6
    SI          shift, and go to state 7
    FUNCTION    shift, and go to state 8
    REPETE      shift, and go to state 9
    WHILE       shift, and go to state 10
    TAILLE      shift, and go to state 11
    RECTANGLE   shift, and go to state 12
    CARRE       shift, and go to state 13
    TRIANGLE    shift, and go to state 14
    CERCLE      shift, and go to state 15
    ELLIPSE     shift, and go to state 16
    LIGNE       shift, and go to state 17
    CHEMIN      shift, and go to state 18
    TEXTE       shift, and go to state 19

    programme                  go to state 20
    subProgramme               go to state 21
    instruction                go to state 22
    expression                 go to state 23
    variable                   go to state 24
    declarationVariableSimple  go to state 25
    declarationCanva           go to state 26
    declarationFigure          go to state 27
    carre                      go to state 28
    rectangle                  go to state 29
    triangle                   go to state 30
    cercle                     go to state 31
    ellipse                    go to state 32
    ligne                      go to state 33
    chemin                     go to state 34
    texte                      go to state 35
    accesFigure                go to state 36
    modificationFigure         go to state 37
    declarationVariable        go to state 38
    if                         go to state 39
    boucleFor                  go to state 40
    boucleWhile                go to state 41
    affectation                go to state 42
    fonction                   go to state 43
    appelFonction              go to state 44


State 1

    3 subProgramme: NL .

    $default  reduce using rule 3 (subProgramme)


State 2

   39 declarationVariableSimple: INT_TYPE . variable '=' operation

    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45

    variable  go to state 46


State 3

   41 declarationVariableSimple: BOOL_TYPE . variable '=' boolValue

    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45

    variable  go to state 47


State 4

   40 declarationVariableSimple: FLOAT_TYPE . variable '=' operation

    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45

    variable  go to state 48


State 5

   35 variable: VARIABLE .

    $default  reduce using rule 35 (variable)


State 6

   42 declarationVariableSimple: COULEUR . variable '=' HEXA_VALUE

    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45

    variable  go to state 49


State 7

   99 if: SI . '(' conditions ')' ALORS '{' NL instructions '}' NL else

    '('  shift, and go to state 50


State 8

  111 fonction: FUNCTION . variable '(' arguments ')' '{' NL instructions '}'

    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45

    variable  go to state 51


State 9

  102 boucleFor: REPETE . operation FOIS '{' NL instructions '}'

    NUMBER    shift, and go to state 52
    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45
    '-'       shift, and go to state 53
    '('       shift, and go to state 54

    variable   go to state 55
    operation  go to state 56


State 10

  103 boucleWhile: WHILE . '(' conditions ')' '{' NL instructions '}'

    '('  shift, and go to state 57


State 11

   36 variable: TAILLE .
   43 declarationCanva: TAILLE . operation operation

    NUMBER    shift, and go to state 52
    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45
    '-'       shift, and go to state 53
    '('       shift, and go to state 54

    NUMBER    [reduce using rule 36 (variable)]
    VARIABLE  [reduce using rule 36 (variable)]
    TAILLE    [reduce using rule 36 (variable)]
    '-'       [reduce using rule 36 (variable)]
    '('       [reduce using rule 36 (variable)]
    $default  reduce using rule 36 (variable)

    variable   go to state 55
    operation  go to state 58


State 12

   53 rectangle: RECTANGLE . operation operation operation operation operation operation operation operation attributs
   61 accesFigure: RECTANGLE . '[' NUMBER ']' '.'

    NUMBER    shift, and go to state 52
    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45
    '-'       shift, and go to state 53
    '['       shift, and go to state 59
    '('       shift, and go to state 54

    variable   go to state 55
    operation  go to state 60


State 13

   52 carre: CARRE . operation operation operation attributs
   60 accesFigure: CARRE . '[' NUMBER ']' '.'

    NUMBER    shift, and go to state 52
    VARIABLE  shift, and go to state 5
    TAILLE    shift, and go to state 45
    '-'       shift, and go to state 53
    '['       shift, and go to state 61
    '('       shift, and go to state 54

    variable   go to state 55
    operation  go to state 62


State 14

   54 triangle: TRIANGLE . operation operation operation operation attributs
   62 accesFigure: TRIANGLE . '[' NUMBER ']' '.'
